買い物メモの取得、追加、削除のAPI側との繋ぎ込み
